--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,8 @@ set -g default-terminal "screen-256color"
 # bind-key h select-pane -L
 # unbind-key l
 # bind-key l select-pane -R
+# Enable vi navigation in copy mode
+setw -g mode-keys vi
 
 # Allow for mouse usage
 set -g mouse on
@@ -25,8 +27,3 @@ bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
-# keep sessions between restarts
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on'
