Tmux splits stay in cwd

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,14 +1,5 @@
 set -g default-terminal "screen-256color"
 
-# Remap window navigation to vim-style
-# unbind-key j
-# bind-key j select-pane -D
-# unbind-key k
-# bind-key k select-pane -U
-# unbind-key h
-# bind-key h select-pane -L
-# unbind-key l
-# bind-key l select-pane -R
 # Enable vi navigation in copy mode
 setw -g mode-keys vi
 
@@ -27,3 +18,8 @@ bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+# Open new panes and windows in current directory
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
