--- a/i3/config
+++ b/i3/config
@@ -142,7 +142,8 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status -c ~/.i3/i3status.conf
+        # requires pip install py3status
+        status_command py3status -c ~/.i3/i3status.conf
         font pango: M+ 1m, FontAwesome, Ionicons, 10
 }
 
