--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -7,61 +7,62 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
-        colors = true
-        interval = 5
+  output_format = "i3bar"
+  colors = true
+  color_good = "#55FF55"
+  color_bad = "#FF5555"
+  color_degraded = "#FFFF55"
+  interval = 5
 }
 
 
+order += "sysdata"
 order += "disk /"
-order += "wireless _first_"
-order += "ethernet _first_"
-order += "battery all"
+order += "bluetooth"
+order += "wifi"
+order += "battery_level"
 order += "cpu_usage"
 order += "volume master"
 order += "time"
 
 volume master {
-        format = "  %volume"
-        format_muted = "  %volume"
-        device = "default"
-        mixer = "Master"
-        mixer_idx = 0
+  format = "  %volume"
+  format_muted = "  %volume"
+  device = "default"
+  mixer = "Master"
+  mixer_idx = 0
 }
 
-wireless _first_ {
-        format_up = " %quality at %essid - %ip"
-        format_down = " -"
+battery_level {
+  blocks =""
+  format = "{icon} {percent}%"
+  format = "[\?color=battery {icon} {percent}%]"
 }
 
-ethernet _first_ {
-        # if you use %speed, i3status requires root privileges
-        format_up = " %ip (%speed)"
-        format_down = ""
-}
-
-battery all {
-        format = "%status %percentage %remaining %emptytime"
-        format_down = "No battery"
-        status_chr = "⚡"
-        status_bat = "🔋"
-        status_unk = "? UNK"
-        status_full = ""
-
-        path = "/sys/class/power_supply/BAT%d/uevent"
-        last_full_capacity = true
-        low_threshold = 15
-        hide_seconds = true
-        integer_battery_capacity = true
+wifi {
+  format_up = "  {signal_percent} at {ssid}"
+  format_down = "  - "
 }
 
 time {
   format = "  %a, %d %b %H:%M"
 }
 
+bluetooth {
+  format = "%name"
+  format_prefix = " "
+  format_no_conn = "-"
+  format_no_conn_prefix = " "
+}
+
+disk "/" {
+  format = "%avail"
+}
+
 cpu_usage {
   format = "  %usage"
 }
 
-disk "/" {
-        format = "%avail"
+sysdata {
+  format = "[\?color=mem {mem_used} / {mem_total} GB ({mem_used_percent}%)]"
 }
