--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -49,7 +49,7 @@ time {
 }
 
 bluetooth {
-  format = "%name"
+  format = "{name}"
   format_prefix = " "
   format_no_conn = "-"
   format_no_conn_prefix = " "
