--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -23,6 +23,7 @@ order += "wifi"
 order += "battery_level"
 order += "cpu_usage"
 order += "volume master"
+order += "backlight"
 order += "time"
 
 volume master {
@@ -61,6 +62,10 @@ disk "/" {
 
 cpu_usage {
   format = "  %usage"
+}
+
+backlight {
+
 }
 
 sysdata {
