--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -16,10 +16,9 @@ general {
 }
 
 
+order += "bluetooth"
 order += "sysdata"
 order += "disk /"
-order += "bluetooth"
-order += "wifi"
 order += "battery_level"
 order += "cpu_usage"
 order += "volume master"
@@ -40,13 +39,8 @@ battery_level {
   format = "[\?color=battery {icon} {percent}%]"
 }
 
-wifi {
-  format_up = "  {signal_percent} at {ssid}"
-  format_down = "  - "
-}
-
 time {
-  format = "  %a, %d %b %H:%M"
+  format = "%a, %d %b %H:%M"
 }
 
 bluetooth {
@@ -65,9 +59,8 @@ cpu_usage {
 }
 
 backlight {
-
 }
 
 sysdata {
-  format = "[\?color=mem {mem_used} / {mem_total} GB ({mem_used_percent}%)]"
+  format = "[\?color=mem \uf2db {mem_used} / {mem_total} GB ({mem_used_percent}%)]"
 }
