New tmux key bindings
- C-b to move back and forth between last active windows
- faster escape time
- prefix-r to reload config
- prefix-[hjkl] to resize panes
- prefix-b to send prefix to nested tmux (nesting not currently enabled)
- enable vi keybindings in status line

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,27 @@
 set -g default-terminal "screen-256color"
 
+# switch to the last active window
+bind-key C-b last-window
+
+# fix wait time for escape (helps with tmux and vim)
+set -s escape-time 0
+
+# Reload tmux config
+bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
+
+# Resize panes with prefix and vi direction
+bind-key j resize-pane -D 5
+bind-key k resize-pane -U 5
+bind-key h resize-pane -L 5
+bind-key l resize-pane -R 5
+
+# Allows us to use C-b b <command> to send commands to a TMUX session inside
+bind-key b send-prefix
+
 # Enable vi navigation in copy mode
 setw -g mode-keys vi
+# use vi-style key bindings in the status line
+set -g status-keys vi
 
 # Allow for mouse usage
 set -g mouse on
