--- a/tmux.conf
+++ b/tmux.conf
@@ -6,8 +6,21 @@ bind-key C-b last-window
 # fix wait time for escape (helps with tmux and vim)
 set -s escape-time 0
 
+# show more history
+set -g history-limit 10000
+
+# Highlight monitor if there is activity
+setw -g monitor-activity on
+# Show which windows has had activity in status bar
+set -g visual-activity on
+
 # Reload tmux config
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
+
+# Rather than constraining window size to the maximum size of any client
+# connected to the *session*, constrain window size to the maximum size of any
+# client connected to *that window*. Much more reasonable.
+setw -g aggressive-resize on
 
 # Resize panes with prefix and vi direction
 bind-key j resize-pane -D 5
@@ -43,3 +56,6 @@ bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+# don't rename windows automatically to keep cusstom names
+set-option -g allow-rename off
