--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -59,3 +59,6 @@ bind c new-window -c "#{pane_current_path}"
 
 # don't rename windows automatically to keep cusstom names
 set-option -g allow-rename off
+
+# Theme
+source ~/dotfiles/tmux/theme.sh
