--- a/i3/config
+++ b/i3/config
@@ -1,19 +1,6 @@
 set $mod Mod4
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-font pango:FantasqueMono #monospace 8
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
+font pango: FantasqueMono #monospace 8
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -128,22 +115,23 @@ bindsym $mod+r mode "resize"
 
 # set up the i3bar
 bar {
-        # requires pip install py3status
-        status_command py3status -c ~/.i3/i3status.conf
-        font pango: M+ 1m, FontAwesome, Ionicons, 10
+  # requires pip install py3status
+  status_command py3status -c ~/.i3/i3status.conf
+  font pango: FantasqueMono, FontAwesome, 10
+  separator_symbol " "
 }
 
 # Screen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 5 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 5 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec sudo xbacklight -inc 5 # increase screen brightness
+bindsym XF86MonBrightnessDown exec sudo xbacklight -dec 5 # decrease screen brightness
 
 # Volume controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id $HOME/.config/i3/increase_volume 5 #increase sound volume
+bindsym XF86AudioRaiseVolume exec --no-startup-id $HOME/.i3/increase_volume 5 #increase sound volume
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5%
 bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle # amixer -q set Master toggle
 
 # suspend screen
-bindsym $mod+Shift+Escape exec i3lock -c 000000 && systemctl suspend
+bindsym $mod+Shift+Escape exec systemctl suspend
 # lock screen
 bindsym $mod+m exec "i3lock -c 000000; sleep 1; pgrep i3lock && xset dpms force off"
 bindsym $mod+b exec "sleep 1; xset dpms force off"
@@ -158,7 +146,7 @@ exec --no-startup-id blueman-applet
 # start wifi applet
 exec --no-startup-id nm-applet
 # set background picture
-exec --no-startup-id feh --bg-scale /home/zoid/wallpapers/HPE_wallpaper_2560x1440_r3.jpg
+exec --no-startup-id feh --bg-scale ~/.wallpaper
 
 # rename workspace on the fly
 bindsym $mod+comma exec ~/.i3/rename_workspace
