Configure i3/py3status bar
- Generally try so save space
- Add clipboard with xsel
- Add RSS aggregator (comics)
- Remove cpu usage
- Remove bluetooth
- Replace time with clock
  - modification in JohnAZoidberg/py3status enables click to open calendar

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -16,14 +16,60 @@ general {
 }
 
 
-order += "bluetooth"
+order += "xsel"
+order += "rss_aggregator"
+order += "rapla"
 order += "sysdata"
 order += "disk /"
 order += "battery_level"
-order += "cpu_usage"
 order += "volume master"
 order += "backlight"
-order += "time"
+order += "clock"
+
+xsel {
+  max_size = 50
+  command = "xsel --clipboard --output"
+}
+
+rss_aggregator {
+  aggregator = "ttrss"
+  server =  "CENSORED"
+  folder_ids = ["-3"]
+  format = " {unseen}"
+  user = "CENSORED"
+  password = "CENSORED"
+}
+
+rapla {
+  url = 'CENSORED'
+  aliases = {
+    'Web-Engineering 1': 'Web',
+    'Analysis': 'Mathe',
+    'Intercultural Communication 2': 'Intercultural',
+    'Projektmanagement 2': 'PM',
+    'Marketing 1': 'Marketing',
+    'Algorithmen und Komplexität': 'Algorithms'
+  }
+}
+
+sysdata {
+  decimals = {
+    'swap_used': 1,
+    'mem_used': 1,
+    'mem_used_percent': 0
+  }
+  format = "[\?color=mem \uf2db {swap_used}+{mem_used}GB ({mem_used_percent}%)]"
+}
+
+disk "/" {
+  format = "%avail"
+}
+
+battery_level {
+  blocks =""
+  format = "{icon} {percent}%"
+  format = "[\?color=battery {icon} {percent}%]"
+}
 
 volume master {
   format = "  %volume"
@@ -33,34 +79,14 @@ volume master {
   mixer_idx = 0
 }
 
-battery_level {
-  blocks =""
-  format = "{icon} {percent}%"
-  format = "[\?color=battery {icon} {percent}%]"
+backlight {
+  format = "☼ {level}%"
 }
 
 time {
   format = "%a, %d %b %H:%M"
 }
 
-bluetooth {
-  format = "{name}"
-  format_prefix = " "
-  format_no_conn = "-"
-  format_no_conn_prefix = " "
-}
-
-disk "/" {
-  format = "%avail"
-}
-
-cpu_usage {
-  format = "  %usage"
-}
-
-backlight {
-}
-
-sysdata {
-  format = "[\?color=mem \uf2db {mem_used} / {mem_total} GB ({mem_used_percent}%)]"
+clock {
+  format_time = "%a, %d %b %H:%M"
 }
