--- a/i3/config
+++ b/i3/config
@@ -128,8 +128,8 @@ bindsym XF86MonBrightnessDown exec sudo xbacklight -dec 5 # decrease screen brig
 
 # Volume controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id $HOME/.i3/increase_volume 5 #increase sound volume
-bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5%
-bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle # amixer -q set Master toggle
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle # amixer -q set Master toggle
 
 # suspend screen
 bindsym $mod+Shift+Escape exec systemctl suspend
