--- a/i3/config
+++ b/i3/config
@@ -13,16 +13,18 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+
+# play/pause media content
+bindsym Scroll_Lock exec playerctl play-pause
 
 # change focus
 bindsym $mod+h focus left
+bindsym Shift+$mod+Tab focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
+bindsym $mod+Tab focus right
+bindsym Mod1+Tab focus right
 
 # move focused window
 bindsym $mod+Shift+h move left
@@ -128,12 +130,13 @@ bindsym XF86MonBrightnessUp exec sudo xbacklight -inc 5 # increase screen bright
 bindsym XF86MonBrightnessDown exec sudo xbacklight -dec 5 # decrease screen brightness
 
 # Volume controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id $HOME/.i3/increase_volume 5 #increase sound volume
+bindsym XF86AudioRaiseVolume exec $HOME/.i3/increase_volume 5 #increase sound volume
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym Shift+XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
 bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle # amixer -q set Master toggle
 
 # suspend screen
-bindsym $mod+Shift+Escape exec systemctl suspend
+bindsym XF86Sleep exec systemctl suspend
 # lock screen
 bindsym $mod+m exec "i3lock -c 000000; sleep 1; pgrep i3lock && xset dpms force off"
 bindsym $mod+b exec "sleep 1; xset dpms force off"
@@ -152,9 +155,6 @@ exec --no-startup-id feh --bg-scale ~/.wallpaper
 
 # rename workspace on the fly
 bindsym $mod+comma exec ~/.i3/rename_workspace
-
-# flip through containers
-bindsym $mod+Tab focus right
 
 # hide borders at screen edges
 hide_edge_borders both
