--- a/i3/config
+++ b/i3/config
@@ -90,6 +90,10 @@ bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 10 
 bindsym $mod+Shift+odiaeresis move container to workspace ""
 
+# Monitor setup
+bindsym $mod+Control+1 exec $HOME/dotfiles/screenlayouts/singleMonitor.sh
+bindsym $mod+Control+2 exec $HOME/dotfiles/screenlayouts/doubleMonitor.sh
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
