Manage tmux with ansible

--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "screen-256color"
+#set-option -g default-shell /usr/bin/zsh
 
 # switch to the last active window
 bind-key C-b last-window
@@ -12,7 +13,7 @@ set -g history-limit 10000
 # Highlight monitor if there is activity
 setw -g monitor-activity on
 # Show which windows has had activity in status bar
-set -g visual-activity on
+set -g visual-activity off
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
@@ -61,4 +62,4 @@ bind c new-window -c "#{pane_current_path}"
 set-option -g allow-rename off
 
 # Theme
-source ~/dotfiles/tmux/theme.sh
+source-file ~/dotfiles/roles/tmux/files/theme.sh
