Install vim solarized without vim-plug
Plugins can't be installed automatically because the colorscheme is a
plugin which is required when launching vim.
Installing it before installing the plugins solves this problem.
It is also more lightweight to have a color file than a plugin.

--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -13,6 +13,12 @@
     - tmp
     - backup
     - autoload
+    - colors
+
+- name: Install solarized colorscheme
+  get_url:
+    url: https://raw.githubusercontent.com/altercation/vim-colors-solarized/master/colors/solarized.vim
+    dest: ~/.vim/colors/solarized.vim
 
 - name: Install vim-plug plugin manager
   get_url:
