--- a/roles/i3/tasks/main.yml
+++ b/roles/i3/tasks/main.yml
@@ -1,8 +1,15 @@
 ---
+- include_vars: "{{ item }}"
+  with_first_found:
+      - "../vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version | int}}.yml"
+      - "../vars/{{ ansible_distribution }}.yml"
+      - "../vars/{{ ansible_os_family }}.yml"
+      - "../vars/default.yml"
+
 - name: Install i3
   become: true
-  apt:
-    name: i3
+  package:
+    name: "{{ i3_package_name }}"
     state: installed
 
 - name: Install py3status
