Configure synaptics driver with ansible

--- a/roles/synaptics/files/60-synaptics-options.conf
+++ b/roles/synaptics/files/60-synaptics-options.conf
@@ -9,4 +9,7 @@ Section "InputClass"
   Option "HorizTwoFingerScroll" "1"
   Option "RightButtonAreaLeft" "0"
   Option "RightButtonAreaTop" "0"
+  Option "RTCornerButton" "0"
+  Option "RBCornerButton" "0"
+  Option "SoftButtonAreas" "0 0 0 0 0 0 0 0"
 EndSection
