Handle py3status clicks in config file
Py3status clicks should not be handled in the module but rather in the
config file.
- A click on the date opens gsimplecal which will be installed with this
role
- A click on the RSS icon opens the RSS feed in a browser
- A click on the clipboard clears it

--- a/roles/i3/files/i3status.conf
+++ b/roles/i3/files/i3status.conf
@@ -29,9 +29,11 @@ order += "clock"
 xsel {
   max_size = 50
   command = "xsel --clipboard --output"
+  on_click 1 = "exec xsel --clear --clipboard"
 }
 
 rss_aggregator {
+  on_click 1 = "exec xdg-open 'CENSORED'"
   aggregator = "ttrss"
   server =  "CENSORED"
   folder_ids = ["-3"]
@@ -89,4 +91,5 @@ time {
 
 clock {
   format_time = "%a, %d %b %H:%M"
+  on_click 1 = "exec gsimplecal"
 }
