--- a/roles/ranger/tasks/main.yml
+++ b/roles/ranger/tasks/main.yml
@@ -6,7 +6,7 @@
     state: installed
 
 - name: Symlink rifle config
-  - file:
+  file:
     src: "{{ role_path }}/files/rifle.conf"
     dest: "~/.config/ranger/rifle.conf"
     state: link
