Fix ranger role config directory
Adds a task that creates the config directory for ranger. This is
required for the config task.

--- a/roles/ranger/tasks/main.yml
+++ b/roles/ranger/tasks/main.yml
@@ -5,6 +5,11 @@
     name: ranger
     state: installed
 
+- name: Create ranger config directory
+  file:
+    path: "~/.config/ranger"
+    state: directory
+
 - name: Symlink rifle config
   file:
     src: "{{ role_path }}/files/rifle.conf"
