--- a/roles/utilities/tasks/main.yml
+++ b/roles/utilities/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+- include_vars: "{{ item }}"
+  with_first_found:
+      - "../vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version | int}}.yml"
+      - "../vars/{{ ansible_distribution }}.yml"
+      - "../vars/{{ ansible_os_family }}.yml"
+      - "../vars/default.yml"
+
 - name: Install utilities
   become: true
   package:
@@ -6,4 +13,4 @@
   with_items:
     - unzip
     - wget
-    - openssh
+    - "{{ openssh_package_name }}"
