Remove personal data in gitconfig
And warn about whitespace

(cherry picked from JohnAZoidberg commit 4de156f3e0b71045ce56d1d3a34f56e2843b8542)

--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -12,7 +12,9 @@
     state: link
   with_items:
     - gitattributes
-    - gitconfig
     - gitfiles
 
-# TODO Ensure username and email are set
+- name: Copy templated gitconfig to final destination
+  template:
+    src: "{{ role_path }}/templates/gitconfig.j2"
+    dest: "~/.gitconfig"
