Add dependencies between roles
(cherry picked from JohnAZoidberg commit b458244c10e8587f1f871a22aeb0b6036b823c84)

--- a/roles/zoid/tasks/main.yml
+++ b/roles/zoid/tasks/main.yml
@@ -1,5 +1,5 @@
-- name: Create zoid with fish shell
+- name: Create user with fish shell as default
   become: true
   user:
-    name: zoid
+    name: "{{ fish_user }}"
     shell: /usr/bin/fish
