Fix network-manager install task

--- a/roles/network-manager/tasks/main.yml
+++ b/roles/network-manager/tasks/main.yml
@@ -4,7 +4,7 @@
   package:
     name: "{{ item }}"
   with_items:
-    - NetworkManager
+    - networkmanager
     - network-manager-applet
 
 - name: Enable NetworkManager.service
