Add playbook which only configures the base
The new playbook does the same configuration as base.yml but it does not
install anything. This is particularly useful if you want to install the
programs yourself. (like on NixOS)

--- a/roles/fish/tasks/main.yml
+++ b/roles/fish/tasks/main.yml
@@ -4,6 +4,7 @@
   package:
     name: fish
     state: installed
+  when: only_config is not defined
 
 - name: Create fish config directory
   file:
