--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -4,6 +4,7 @@
   package:
     name: python-pip
     state: installed
+  when: only_config is not defined
 
 - name: Symlink python config file
   file:
