Enable true color support for tmux
Prevents fish from doing weird colors when run in tmux

--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -61,5 +61,9 @@ bind c new-window -c "#{pane_current_path}"
 # don't rename windows automatically to keep cusstom names
 set-option -g allow-rename off
 
+# enable true color support
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+
 # Theme
 source-file ~/dotfiles/roles/tmux/files/theme.sh
