Change behavior when no git name and email is set
It might be desirable to do not specify the git email and username
globally. This should be reflected in this script.

Added a line to prevent git from guessing the email and name based on
the system if it is not specified.

--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -15,8 +15,8 @@
     - gitattributes
     - gitfiles
 
-- fail:
-    msg: "Variable git_name or git_email is not defined."
+- debug:
+    msg: "Variable git_name or git_email is not defined. Creating gitconfig without user.email and user.name specified."
   when: git_name == "" or git_email == "" or git_name is undefined or git_email is undefined
 
 - name: Copy templated gitconfig to final destination
