--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -14,12 +14,4 @@
   with_items:
     - gitattributes
     - gitfiles
-
-- debug:
-    msg: "Variable git_name or git_email is not defined. Creating gitconfig without user.email and user.name specified."
-  when: git_name == "" or git_email == "" or git_name is undefined or git_email is undefined
-
-- name: Copy templated gitconfig to final destination
-  template:
-    src: "{{ role_path }}/templates/gitconfig.j2"
-    dest: "~/.gitconfig"
+    - gitconfig
