Move i3 config files into subdirectory

--- a/roles/i3/tasks/main.yml
+++ b/roles/i3/tasks/main.yml
@@ -22,7 +22,7 @@
 
 - name: Symlink i3 config
   file:
-    src: "{{ role_path }}/files"
+    src: "{{ role_path }}/files/i3"
     dest: "~/.i3"
     state: link
     force: true
