Change state from installed to present
As complained from ansible this may become deprecated later there it is
changed

--- a/roles/chromium/tasks/main.yml
+++ b/roles/chromium/tasks/main.yml
@@ -3,10 +3,10 @@
   become: true
   package:
     name: chromium
-    state: installed
+    state: present
 
 #- name: Install widevine DRM tool (for Netflix)
 #  become: true
 #  package:
 #    name: chromium-widevine
-#    state: installed
+#    state: present
