--- a/roles/backlight/tasks/main.yml
+++ b/roles/backlight/tasks/main.yml
@@ -3,7 +3,7 @@
   become: true
   package:
     name: "{{ item }}"
-    state: installed
+    state: present
   with_items:
     - xorg-xbacklight
     - xf86-video-intel
