--- a/roles/dunst/tasks/main.yml
+++ b/roles/dunst/tasks/main.yml
@@ -3,7 +3,7 @@
   become: True
   package:
     name: dunst
-    state: installed
+    state: present
   when: only_config is not defined
 
 - name: Symlink dunst config
