--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -3,7 +3,7 @@
   become: true
   package:
     name: python-pip
-    state: installed
+    state: present
   when: only_config is not defined
 
 - name: Symlink python config file
