--- a/roles/sudo/tasks/main.yml
+++ b/roles/sudo/tasks/main.yml
@@ -2,7 +2,7 @@
   become: yes
   package:
     name: sudo
-    state: installed
+    state: present
 
 - name: Ensure sudo group is present
   become: yes
