--- a/roles/laptop_power/tasks/main.yml
+++ b/roles/laptop_power/tasks/main.yml
@@ -5,3 +5,5 @@
     src: "{{ role_path }}/files/logind.conf"
     dest: "/etc/systemd/logind.conf"
     state: link
+    force: yes
+  when: ansible_os_family != "NixOS"
