--- a/roles/network-manager/tasks/main.yml
+++ b/roles/network-manager/tasks/main.yml
@@ -6,9 +6,11 @@
   with_items:
     - networkmanager
     - network-manager-applet
+  when: only_config is not defined
 
 - name: Enable NetworkManager.service
   systemd:
     name: NetworkManager
     enabled: true
+  when: ansible_os_family != "NixOS"
 
