--- a/roles/chromium/tasks/main.yml
+++ b/roles/chromium/tasks/main.yml
@@ -4,9 +4,11 @@
   package:
     name: chromium
     state: present
+  when: only_config is not defined
 
-#- name: Install widevine DRM tool (for Netflix)
-#  become: true
-#  package:
-#    name: chromium-widevine
-#    state: present
+- name: Install widevine DRM tool (for Netflix)
+  become: true
+  package:
+    name: chromium-widevine
+    state: installed
+  when: ansible_os_family == "Arch Linux" or ansible_os_family == "Archlinux"
