--- a/roles/i3/tasks/main.yml
+++ b/roles/i3/tasks/main.yml
@@ -52,7 +52,7 @@
     src: "{{ role_path }}/files/wakelock.service"
     dest: "/etc/systemd/system/wakelock.service"
     state: link
-  when: only_config is not defined
+  when: ansible_os_family != "NixOS"
 
 - name: Enable systemd wakelock service
   become: True
