--- a/roles/sudo/tasks/main.yml
+++ b/roles/sudo/tasks/main.yml
@@ -3,12 +3,14 @@
   package:
     name: sudo
     state: present
+  when: only_config is not defined
 
 - name: Ensure sudo group is present
   become: yes
   group:
     name: sudo
     state: present
+  when: ansible_os_family != "NixOS"
 
 - name: Add user to sudo group
   become: yes
@@ -16,6 +18,7 @@
     name: "{{ sudo_user }}"
     groups: sudo
     append: yes
+  when: ansible_os_family != "NixOS"
 
 - name: Ensure user is in sudoers file
   become: true
@@ -25,3 +28,4 @@
     line: "%sudo ALL=(ALL) ALL"
     state: present
     validate: "/usr/sbin/visudo -cf %s"
+  when: ansible_os_family != "NixOS"
