--- a/roles/i3/tasks/main.yml
+++ b/roles/i3/tasks/main.yml
@@ -37,18 +37,13 @@
 - name: Install python packages for status calendar
   become: true
   pip:
-    name: "{{ item }}"
-  with_items:
-    - pytz
-    - tzlocal
+    name: [ 'pytz' 'tzlocal' ]
   when: only_config is not defined
 
 - name: Install python packages for rss aggregator
   become: true
   pip:
-    name: "{{ item }}"
-  with_items:
-    - requests
+    name: [ 'requests' ]
   when: only_config is not defined
 
 - name: Symlink wakelock file to lock on suspend and sleep
