user: Set shell only when user specified

--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -3,4 +3,4 @@
   user:
     name: "{{ fish_user }}"
     shell: /usr/bin/fish
-  when: ansible_os_family != "NixOS"
+  when: (ansible_os_family != "NixOS") and (fish_user is defined)
