--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -43,14 +43,19 @@ set -g mouse on
 set -g base-index 1
 
 # Smart pane switching with awareness of vim splits
-# thanks to this:
-# https://gist.github.com/mislav/5189704
-is_vim=True
+# https://github.com/christoomey/vim-tmux-navigator
+# Added support for .vim-wrapped as produced by nixos
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +\\.*(\\S+\\/)?g?(view|n?vim?x?)(diff)?(-wrapped)?$'"
 bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+# Display error when ps or grep is not installed (Should not really be a problem but it is annoying to look for the bug later...)
+if-shell "ps" "" "display-message 'ps not installed vim-tmux-navigator will not work when using vim'"
+if-shell "grep -V" "" "display-message 'grep not installed vim-tmux-navigator will not work when using vim'"
 
 # Open new panes and windows in current directory
 bind '"' split-window -c "#{pane_current_path}"
