ssh: Add general setting for ssh-agent
Roles don't include ssh agent yet as I am still trying to decide whether
to use a service or a fish plugin.

--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -30,3 +30,4 @@
   with_items:
     - { src: 'github', dest: 'github' }
     - { src: 'selfnet', dest: 'selfnet' }
+    - { src: 'general', dest: 'general' }
