tmux: Add binding for synchronize-panes

--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -62,6 +62,9 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
+# Allow easy debug sessions on multiple panes
+bind S setw synchronize-panes \; display "synchronize-panes #{synchronize-panes}"
+
 # don't rename windows automatically to keep cusstom names
 set-option -g allow-rename off
 
